--- a/GradingSystem/MainWindow.xaml
+++ b/GradingSystem/MainWindow.xaml
@@ -63,7 +63,7 @@
                         <!-- Courses -->
                         <ListViewItem HorizontalAlignment="Center" Margin="0 0">
                             <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
-HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black">
+HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black" Click="courstBtn">
                                 <StackPanel Margin="-5">
                                     <materialDesign:PackIcon Kind="FolderOutline" Foreground="White"/>
                                 </StackPanel>
