--- a/GradingSystem/View/Admin/EditStudent.xaml
+++ b/GradingSystem/View/Admin/EditStudent.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GradingSystem.View.Admin"
         mc:Ignorable="d" Title="Edit Student"
-        WindowStartupLocation="CenterScreen" Width="670" Height="260"
+        WindowStartupLocation="CenterScreen" Width="670" Height="340"
         WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown">
     <Grid>
         <Border Background="Black" Margin="05 05 05 05" CornerRadius="4">
@@ -33,6 +33,7 @@
                     </Grid>
                     <Grid Grid.Row="1" Margin="20 05 20 20">
                         <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
@@ -65,7 +66,35 @@
                             </TextBox>
                         </Grid>
 
-                        <Grid Grid.Row="1" Margin="0 0 0 0">
+                        <Grid Grid.Row="1">
+
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBox x:Name="idTxt" Text="{Binding SelectedStudent.StudentId}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                                     Margin="0 10 20 20" Height="50" Width="300" FontSize="20" IsReadOnly="True"
+                                     Grid.Column="0" MaxLength="20">
+                                <materialDesign:HintAssist.Hint>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Student ID" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                </materialDesign:HintAssist.Hint>
+                            </TextBox>
+
+                            <TextBox x:Name="emailTxt" Text="{Binding SelectedStudent.Email}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                                     Margin="0 10 0 20" Height="50" Width="300" FontSize="20"
+                                     Grid.Column="1" MaxLength="20">
+                                <materialDesign:HintAssist.Hint>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Email" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                </materialDesign:HintAssist.Hint>
+                            </TextBox>
+                        </Grid>
+
+                        <Grid Grid.Row="2" Margin="0 0 0 0">
 
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="auto"/>
