--- a/GradingSystem/View/Admin/ManageCourse.xaml
+++ b/GradingSystem/View/Admin/ManageCourse.xaml
@@ -58,7 +58,7 @@
                                             </TextBox>
                                         </Grid>
                                         <Grid Grid.Column="1">
-                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100">
+                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="AddBtn">
                                                 <StackPanel>
                                                     <materialDesign:PackIcon Kind="Add" Height="20"/>
                                                 </StackPanel>
@@ -70,31 +70,23 @@
                         </Grid>
 
                         <Grid Grid.Row="1" Height="auto">
-                            <DataGrid x:Name="studentsDataGrid"
-                  CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Courses}"
-                                  AutoGenerateColumns="False">
-
-                                <!-- Define RowStyle to set background for all rows -->
-                                <DataGrid.RowStyle>
-                                    <Style TargetType="DataGridRow">
-                                        <Setter Property="Background" Value="White"/>
-                                    </Style>
-                                </DataGrid.RowStyle>
+                            <DataGrid x:Name="courseDataGrid" ItemsSource="{Binding Courses}" AutoGenerateColumns="False">
 
                                 <DataGrid.Columns>
 
                                     <DataGridTextColumn Header="CourseID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding CourseId}"/>
                                     <DataGridTextColumn Header="CourseName" CanUserResize="False" Binding="{Binding CourseName}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Description" CanUserResize="False" Binding="{Binding Description}" IsReadOnly="True" Width="*"/>
                                     <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
 
-                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
+                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="*" >
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
                                                     <Button Style="{StaticResource gridEditButton}">
                                                         <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
-                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}">
+                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}" GotMouseCapture="DeleteBtn">
                                                         <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
                                                 </StackPanel>
