--- a/GradingSystem/View/Admin/AddStudent.xaml
+++ b/GradingSystem/View/Admin/AddStudent.xaml
@@ -102,12 +102,12 @@
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
 
-                            <ComboBox x:Name="courseCmb"  Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
-                                      Margin="0,10,20,0" Height="50" Width="300" FontSize="20" SelectedValuePath="CourseName"
-                                      Grid.Column="0" ItemsSource="{Binding Courses}"
-                                      DisplayMemberPath="CourseName">
+                            <ComboBox x:Name="programCmb"  Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                                      Margin="0,10,20,0" Height="50" Width="300" FontSize="20" SelectedValuePath="ProgramName"
+                                      Grid.Column="0" ItemsSource="{Binding Programs}"
+                                      DisplayMemberPath="ProgramName">
                                 <materialDesign:HintAssist.Hint>
-                                    Course
+                                    Program
                                 </materialDesign:HintAssist.Hint>
                             </ComboBox>
 
