--- a/GradingSystem/View/Admin/ManageStudents.xaml
+++ b/GradingSystem/View/Admin/ManageStudents.xaml
@@ -78,11 +78,11 @@
                                     <DataGridTextColumn Header="Firstname" CanUserResize="False" Binding="{Binding FirstName}" IsReadOnly="True" Width="*"/>
                                     <DataGridTextColumn Header="Lastname" CanUserResize="False" Binding="{Binding LastName}" IsReadOnly="True" Width="*"/>
                                     <DataGridTextColumn Header="Email" CanUserResize="False" Binding="{Binding Email}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Course" CanUserResize="False" Binding="{Binding Course}" IsReadOnly="True" Width="auto"/>
+                                    <DataGridTextColumn Header="Course" CanUserResize="False" Binding="{Binding Program}" IsReadOnly="True" Width="auto"/>
                                     <DataGridTextColumn Header="Year Level" CanUserResize="False" Binding="{Binding YearLevel}" IsReadOnly="True" Width="auto"/>
                                     <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
 
-                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="*" >
+                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
