--- a/GradingSystem/View/Admin/AddStudent.xaml
+++ b/GradingSystem/View/Admin/AddStudent.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:GradingSystem.View.Admin"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen" Height="340" Width="670"
+        WindowStartupLocation="CenterScreen" Height="400" Width="670"
         WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown">
 
     <Grid>
@@ -34,6 +34,7 @@
                     </Grid>
                     <Grid Grid.Row="1" Margin="20 05 20 20">
                         <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
@@ -118,16 +119,28 @@
                                     YearLevel
                                 </materialDesign:HintAssist.Hint>
 
-                                <ComboBoxItem>1st Year</ComboBoxItem>
-                                <ComboBoxItem>2nd Year</ComboBoxItem>
-                                <ComboBoxItem>3rd Year</ComboBoxItem>
-                                <ComboBoxItem>4th Year</ComboBoxItem>
+                                <ComboBoxItem>First Year</ComboBoxItem>
+                                <ComboBoxItem>Second Year</ComboBoxItem>
+                                <ComboBoxItem>Third Year</ComboBoxItem>
+                                <ComboBoxItem>Fourth Year</ComboBoxItem>
+                            </ComboBox>
+                        </Grid>
+                        <Grid Grid.Row="3" Margin="0 0 0 0">
+                            <ComboBox x:Name="semesterCmb" Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                                      Margin="0,10,20,0" Height="50" Width="300" FontSize="20"
+                                      Grid.Column="1" SelectedValuePath="Content">
+                                <materialDesign:HintAssist.Hint>
+                                    Semester
+                                </materialDesign:HintAssist.Hint>
+
+                                <ComboBoxItem>First Semester</ComboBoxItem>
+                                <ComboBoxItem>Second Semester</ComboBoxItem>
                             </ComboBox>
                         </Grid>
                     </Grid>
                     <Grid Grid.Row="2" Margin="10 0 10 10">
                         <Grid>
-                            <Button Style="{StaticResource   MaterialDesignFlatDarkBgButton}" Click="addStudentBtn">SAVE</Button>
+                            <Button Style="{StaticResource   MaterialDesignFlatDarkBgButton}" Click="AddStudentBtn">SAVE</Button>
                         </Grid>
                     </Grid>
                 </Grid>
