--- a/GradingSystem/View/Admin/Dashboard.xaml
+++ b/GradingSystem/View/Admin/Dashboard.xaml
@@ -7,7 +7,8 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:wpfAnimatedGif="http://wpfanimatedgif.codeplex.com" 
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-             mc:Ignorable="d"
+             mc:Ignorable="d" HorizontalAlignment="Stretch"
+             VerticalAlignment="Stretch"
              d:DesignHeight="600" d:DesignWidth="1106.25">
     <Grid>
         <Grid.ColumnDefinitions>
