--- a/GradingSystem/View/Admin/Dialogs/AddGrade.xaml
+++ b/GradingSystem/View/Admin/Dialogs/AddGrade.xaml
@@ -3,14 +3,60 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GradingSystem.View.Admin.Dialogs"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:local="clr-namespace:GradingSystem.View.Admin.Dialogs" 
         mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen" Height="300" Width="500"
+        WindowStartupLocation="CenterScreen" Height="300" Width="700"
         WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown">
-    
+
     <Grid>
-        <Border Background="Black" Margin="05 05 05 05" CornerRadius="4">
-            
+        <Border Background="Black" Margin="05 05 05 05" CornerRadius="4" Padding="5 5 5 5">
+            <materialDesign:Card>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid>
+                        <materialDesign:Card Background="Green">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+
+                                <Grid>
+                                    <TextBox x:Name="idTxt"  Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                                             Margin="0 0 0 0" Height="40" Width="130" FontSize="15" Padding="5 0 0 0" Background="White"
+                                             Grid.Column="1" MaxLength="15" KeyDown="StudentIdTxt_KeyDown">
+                                        <materialDesign:HintAssist.Hint>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="Student ID" VerticalAlignment="Center"/>
+                                            </StackPanel>
+                                        </materialDesign:HintAssist.Hint>
+                                    </TextBox>
+                                </Grid>
+                            </Grid>
+                        </materialDesign:Card>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <DataGrid ItemsSource="{Binding StudentSubjects}" 
+                                  AutoGenerateColumns="False" 
+                                  CanUserAddRows="False" 
+                                  CanUserDeleteRows="False"
+                                  IsReadOnly="False" CellEditEnding="DataGrid_CellEditEnding">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True"/>
+                                <DataGridTextColumn Header="Descriptive Title" Binding="{Binding Subject.SubjectName}" IsReadOnly="True"/>
+                                <DataGridTextColumn Header="Course Code" Binding="{Binding CourseCode}" IsReadOnly="True"/>
+                                <DataGridTextColumn Header="Grade" Binding="{Binding Grade}" />
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Grid>
+                </Grid>
+            </materialDesign:Card>
         </Border>
     </Grid>
 </Window>
