--- a/GradingSystem/View/Admin/ManageGrades.xaml
+++ b/GradingSystem/View/Admin/ManageGrades.xaml
@@ -8,7 +8,6 @@
              xmlns:viewModel="clr-namespace:GradingSystem.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="1106.25">
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -18,9 +17,9 @@
         <!-- Dashboard Title -->
         <Grid Grid.Row="0" Margin="30 0 0 0">
             <TextBlock Text="Manage Grades" 
-           FontSize="35"
-           Style="{StaticResource MaterialDesignCaptionTextBlock}" 
-           VerticalAlignment="Center"/>
+                      FontSize="35"
+                      Style="{StaticResource MaterialDesignCaptionTextBlock}" 
+                      VerticalAlignment="Center"/>
         </Grid>
 
         <Grid Grid.Row="1">
@@ -41,7 +40,7 @@
                                     </Grid.ColumnDefinitions>
 
                                     <Grid Grid.Column="0" Margin="20 0 0 0">
-                                        <Button Width="100" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFlatDarkBgButton}">
+                                        <Button Width="100" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFlatDarkBgButton}" Command="{Binding ExportCommand}">
                                             Export
                                         </Button>
                                     </Grid>
@@ -50,19 +49,21 @@
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="auto"/>
                                             <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="auto"/>
                                         </Grid.ColumnDefinitions>
 
                                         <Grid Grid.Column="0">
-                                            <TextBox Style="{StaticResource MaterialDesignTextBox}" Width="200"
-                                 Height="40">
-                                            </TextBox>
+                                            <TextBox Style="{StaticResource MaterialDesignTextBox}" Width="200" Height="40"/>
                                         </Grid>
                                         <Grid Grid.Column="1">
-                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100">
+                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="AddGradeBtn" >
                                                 <StackPanel>
                                                     <materialDesign:PackIcon Kind="Add" Height="20"/>
                                                 </StackPanel>
                                             </Button>
+                                        </Grid>
+                                        <Grid Grid.Column="2">
+                                            <Button Content="Print Grades" Width="100" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFlatDarkBgButton}" Command="{Binding PrintGradesCommand}"/>
                                         </Grid>
                                     </Grid>
                                 </Grid>
@@ -71,10 +72,9 @@
 
                         <Grid Grid.Row="1" Height="auto">
                             <DataGrid x:Name="studentsDataGrid"
-                  CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Grades}"
-                                  AutoGenerateColumns="False" SelectionMode="Single">
+                                      CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Grades}"
+                                      AutoGenerateColumns="False" SelectionMode="Single">
 
-                                <!-- Define RowStyle to set background for all rows -->
                                 <DataGrid.RowStyle>
                                     <Style TargetType="DataGridRow">
                                         <Setter Property="Background" Value="White"/>
@@ -82,18 +82,21 @@
                                 </DataGrid.RowStyle>
 
                                 <DataGrid.Columns>
-
                                     <DataGridTextColumn Header="GradeID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding GradeId}"/>
                                     <DataGridTextColumn Header="Name" CanUserResize="False" Binding="{Binding StudentName}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Course" CanUserResize="False" Binding="{Binding StudentCourse}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="DateSubmitted" CanUserResize="False" Binding="{Binding DateSubmitted, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Program" CanUserResize="False" Binding="{Binding Program}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Year" CanUserResize="False" Binding="{Binding YearLevel}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Semester" CanUserResize="False" Binding="{Binding Semester}" IsReadOnly="True" Width="*"/>
                                     <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
 
-                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
+                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto">
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <Button Style="{StaticResource gridEditButton}">
+                                                    <Button Margin="0 0 0 0" Style="{StaticResource gridEditButton}" Background="Green" Cursor="Hand" Click="ShowGradeBtn">
+                                                        <materialDesign:PackIcon Kind="Eye" Style="{StaticResource gridButtonIcon}"/>
+                                                    </Button>
+                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridEditButton}">
                                                         <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
                                                     <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}">
